WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114859
OSAllocatorPosix: fix build warnings about unused parameters in QNX
https://bugs.webkit.org/show_bug.cgi?id=114859
Summary
OSAllocatorPosix: fix build warnings about unused parameters in QNX
Alberto Garcia
Reported
2013-04-19 02:08:31 PDT
The UNUSED_PARAMS macros are already set for Linux, but not for QNX.
Attachments
Patch
(1.25 KB, patch)
2013-04-19 02:09 PDT
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-04-19 02:09:24 PDT
Created
attachment 198826
[details]
Patch
WebKit Commit Bot
Comment 2
2013-04-19 06:31:40 PDT
Comment on
attachment 198826
[details]
Patch Clearing flags on attachment: 198826 Committed
r148741
: <
http://trac.webkit.org/changeset/148741
>
WebKit Commit Bot
Comment 3
2013-04-19 06:31:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug