OSAllocatorPosix: fix build warnings about unused parameters in QNX https://bugs.webkit.org/show_bug.cgi?id=114859

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-04-19
Reviewed by Carlos Garcia Campos.

* wtf/OSAllocatorPosix.cpp:
(WTF::OSAllocator::reserveUncommitted):

Canonical link: https://commits.webkit.org/133257@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148741 268f45cc-cd09-0410-ab3c-d52691b4dbfc